--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -21,6 +21,8 @@
     RUN apt-get install -y libzip-dev zlib1g-dev
 
     # adding this part for add user feature
-    RUN docker-php-ext-install zip mysqli pdo pdo_mysql
+    RUN docker-php-ext-install zip mysqli pdo pdo_mysql \
+    && a2enmod headers \
+    && sed -ri -e 's/^([ \t]*)(<\/VirtualHost>)/\1\tHeader set Access-Control-Allow-Origin "*"\n\1\2/g' /etc/apache2/sites-available/*.conf
 
-    RUN a2enmod rewrite
+    # RUN a2enmod rewrite
