--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,7 +100,7 @@ services:
   #     NUXTPRESS_WP_CONTAINER: ${NUXTPRESS_WP_CONTAINER:-nuxtpress.wp}
   #     NUXTPRESS_WP_URL: ${NUXTPRESS_WP_URL:-http://localhost:3080}
   #     NUXTPRESS_WP_PORT: ${NUXTPRESS_WP_PORT:-3080}
-  #   command: bash -c "npm install && npm run dev"
+  #   command: bash -c "npm install && NUXTPRESS_WP_PORT=${NUXT_WP_PORT:-3080} npm run dev"
   #   networks:
   #     - wpsite
 
