--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@nuxtjs/auth-next": "5.0.0-1637745161.ea53f98",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/bootstrap-vue": "^2.0.4",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "font-awesome": "^4.7.0",
+    "jquery": "^1.12.4",
+    "nuxt": "^2.14.12",
+    "popper.js": "^1.16.1"
   }
 }
