--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
         "core-js": "^3.8.3",
         "font-awesome": "^4.7.0",
         "nuxt": "^2.14.12",
-        "popper.js": "^1.16.1"
+        "popper.js": "^1.16.1",
+        "vuex-persist": "^3.1.3"
     },
     "devDependencies": {
         "@cypress/vue": "^2.2.4",
