--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,18 +18,18 @@
         "@nuxt/image": "^0.6.2",
         "@nuxtjs/auth-next": "5.0.0-1637745161.ea53f98",
         "@nuxtjs/axios": "^5.13.6",
-        "@nuxtjs/bootstrap-vue": "^2.0.4",
         "@sweetalert2/theme-material-ui": "^5.0.10",
         "@woocommerce/woocommerce-rest-api": "^1.0.1",
         "bootstrap": "^5.1.3",
+        "bootstrap-vue": "^2.21.2",
         "core-js": "^3.8.3",
         "font-awesome": "^4.7.0",
         "nuxt": "^2.14.12",
         "nuxt-font-loader": "^1.1.3",
         "popper.js": "^1.16.1",
+        "vee-validate": "3.0.0",
         "vue-sweetalert2": "^5.0.2",
-        "vuex-persist": "^3.1.3",
-        "vee-validate": "3.0.0"
+        "vuex-persist": "^3.1.3"
     },
     "devDependencies": {
         "@cypress/vue": "^2.2.4",
